Added logs for errors on development

--- a/package.json
+++ b/package.json
@@ -33,17 +33,20 @@
   "dependencies": {
     "acl": "^0.4.10",
     "auth-header": "^0.3.1",
-    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
+    "compression": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "hbs": "^4.0.1",
+    "lodash": "^4.17.4",
     "mailgun-js": "^0.11.2",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2",
-    "turtle-orm": "^1.0.12"
+    "turtle-orm": "^1.0.22"
   },
   "devDependencies": {
     "chai": "^3.5.0",
